--- a/changelog.txt
+++ b/changelog.txt
@@ -1,10 +1,21 @@
-¸,ø¤°`°¤ø,¸¸,ø¤°`°¤ø,¸,ø¤°`°¤ø,¸¸,ø¤°`°¤ø,¸,ø¤°`°¤ø,¸¸,ø¤°`°¤ø,¸,ø¤°`°¤ø,¸¸,ø¤
+Â¸,Ã¸Â¤Â°`Â°Â¤Ã¸,Â¸Â¸,Ã¸Â¤Â°`Â°Â¤Ã¸,Â¸,Ã¸Â¤Â°`Â°Â¤Ã¸,Â¸Â¸,Ã¸Â¤Â°`Â°Â¤Ã¸,Â¸,Ã¸Â¤Â°`Â°Â¤Ã¸,Â¸Â¸,Ã¸Â¤Â°`Â°Â¤Ã¸,Â¸,Ã¸Â¤Â°`Â°Â¤Ã¸,Â¸Â¸,Ã¸Â¤
  
                                     - WiiMC -
                               http://www.wiimc.org   
                                (Under GPL License)
  
-¸,ø¤°`°¤ø,¸¸,ø¤°`°¤ø,¸,ø¤°`°¤ø,¸¸,ø¤°`°¤ø,¸,ø¤°`°¤ø,¸¸,ø¤°`°¤ø,¸,ø¤°`°¤ø,¸¸,ø¤
+Â¸,Ã¸Â¤Â°`Â°Â¤Ã¸,Â¸Â¸,Ã¸Â¤Â°`Â°Â¤Ã¸,Â¸,Ã¸Â¤Â°`Â°Â¤Ã¸,Â¸Â¸,Ã¸Â¤Â°`Â°Â¤Ã¸,Â¸,Ã¸Â¤Â°`Â°Â¤Ã¸,Â¸Â¸,Ã¸Â¤Â°`Â°Â¤Ã¸,Â¸,Ã¸Â¤Â°`Â°Â¤Ã¸,Â¸Â¸,Ã¸Â¤
+
+
+                                    - RiiMC -
+[1.0.0 - December 22, 2017]
+
+* Memory available increased by optimising background textures
+* Bug fixed - unneeded bilinear scaling removed, making things less blurry
+* Improved code for mounting SD/SDHC cards
+* ffmpeg libraries updated from a random git release to official full release, n0.9.4
+
+                                    - WiiMC -
 
 [1.3.4 - November 23, 2013]
 
